# hackathon2026-Deepak_Saini

./: .env.compose.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 5f02af7c73a2_tables_created.py  e717d29de71a_expected_action_column_added_in_tickets.py
backend/app/: app.py
backend/app/agents/: __init__.py  ticket_agent.py
backend/app/agents/edges/: ticket_agent.py
backend/app/agents/handlers/: __init__.py  tools.py
backend/app/agents/nodes/: ticket_agent.py
backend/app/agents/prompts/: __init__.py  ticket_agent.py  ticket_agent_v1.py
backend/app/agents/schemas/: __init__.py  states.py
backend/app/agents/tools/: common.py  customer.py  orders.py  registry.py  (+1 more)
backend/app/apis/: __init__.py
backend/app/clients/: __init__.py  pg.py  redis.py
backend/app/core/: config.py  dependencies.py  docs.py  exception.py  lifespan.py  logging.py  metadata.py  middlewares.py  routes.py  scheduler.py  security.py  utils.py
backend/app/handlers/: exceptions.py
backend/app/models/: __init__.py  enums.py  models.py
backend/app/repositories/: __init__.py  agent.py  base.py  customer.py  dashboard.py  order.py  product.py  ticket.py
backend/app/schemas/: api.py  repo.py
backend/app/services/: __init__.py  agent.py  audit.py  base.py  customer.py  dashboard.py  knowledge_base.py  orders.py  product.py  system.py  tickets.py  vector_db.py
backend/chroma/: chroma.sqlite3
backend/scripts/: __init__.py  export_audit_log.py  run_agent.py  seed_data.py
(+26 files in other folders)
