[project]
name = "shopwave-ai-customer-support"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 88
target-version = "py312"

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",                                                                                # pycodestyle errors
    "W",                                                                                # pycodestyle warnings
    "F",                                                                                # pyflakes
    "I",                                                                                # isort (import sorting)
    "UP",                                                                               # pyupgrade
    "B",                                                                                # flake8-bugbear
    "SIM",                                                                              # flake8-simplify
    "PERF",                                                                             # perflint
    "RUF",                                                                              # ruff-specific rules
]
ignore = ["E501"]                                                                       # Line too long (handled by formatter)

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
